--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
   "type": "commonjs",
   "devDependencies": {
     "@11ty/eleventy": "^3.1.2"
+  },
+  "dependencies": {
+    "@excalidraw/excalidraw": "^0.18.0",
+    "reading-time": "^1.5.0",
+    "roughjs": "^4.6.6"
   }
 }
