--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@excalidraw/excalidraw": "^0.18.0",
+    "highlight.js": "^11.11.1",
     "reading-time": "^1.5.0",
     "reveal.js": "^5.2.1",
     "roughjs": "^4.6.6"
